--- a/vajira.deploy/heroku.html
+++ b/vajira.deploy/heroku.html
@@ -179,16 +179,16 @@ Klik Disini" />
 																									</ol>
 												<div class="carousel-inner" role="listbox">
 													<div class="carousel-item active">
-														<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fluid rounded" src="public/storage/projects/c35b2b06a450f87b9cf8e9ba546092ed.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="TiklyDown - TikTok Downloader" />
+														<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fluid rounded" src="https://i.ibb.co/LXgRmW3m/maxresdefault.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Heroku" />
 													</div>
 																											<div class="carousel-item">
-															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="public/storage/gallery/30/c9d9dd0b1c448b475322c9adad101cea.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="TiklyDown - TikTok Downloader" />
+															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="https://i.ibb.co/LXgRmW3m/maxresdefault.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Heroku" />
 														</div>
 																											<div class="carousel-item">
-															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="public/storage/gallery/30/64d68bcaf4b252f5d26112f11206577e.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="TiklyDown - TikTok Downloader" />
+															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="https://i.ibb.co/LXgRmW3m/maxresdefault.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Heroku" />
 														</div>
 																											<div class="carousel-item">
-															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="public/storage/gallery/30/404f71dd41e63eeddb3b1b7891023125.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="TiklyDown - TikTok Downloader" />
+															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="https://i.ibb.co/LXgRmW3m/maxresdefault.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Heroku" />
 														</div>
 																									</div>
 												<a class="carousel-control-prev" data-bs-target="#carousel-interval" role="button" data-bs-slide="prev">
