--- a/vajira.deploy/heroku.html
+++ b/vajira.deploy/heroku.html
@@ -37,8 +37,8 @@ Klik Disini" />
 Cobain deh pake ini:
 Klik Disini" />
 	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:site" content="@TiklyDown - TikTok Downloader" />
-	<meta name="twitter:title" content="TiklyDown - TikTok Downloader" />
+	<meta name="twitter:site" content="@Deploy in Heroku" />
+	<meta name="twitter:title" content="Deploy in Heroku" />
 	<meta name="twitter:image" content="public/storage/thumbnails/c35b2b06a450f87b9cf8e9ba546092ed.png" />	<!-- META AREA -->
 	<!-- Bundle and Base CSS -->
 	<link rel="stylesheet" href="theme/frontend/crypto-dark-v3/assets/css/vendor.bundlea8c4.css?ver=557">
