--- a/vajira.deploy/heroku.html
+++ b/vajira.deploy/heroku.html
@@ -243,7 +243,7 @@ Klik Disini" />
 	</script>
 			<script type="4e2c8e9b4d3be7363dceadd8-text/javascript">
 			var disqus_config = function() {
-				this.page.url = 'tikly-tiktok-downloader.html'; // Replace PAGE_URL with your page's canonical URL variable
+				this.page.url = 'heroku'; // Replace PAGE_URL with your page's canonical URL variable
 				this.page.identifier = '30'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 			};
 
