--- a/vajira.deploy/heroku.html
+++ b/vajira.deploy/heroku.html
@@ -210,7 +210,7 @@ Klik Disini" />
 																			</div>
 								</div>
 
-								<p>You cn now deploy VAJIRA-MD in heroku platform. no banned, no crash amd no bugs. you cn enjoy after deploy in heroku super fast amd secure your accounts. enjoy guys good luck! <a href="https://www.heroku.com/">Click Here</a> Create a account.</p>								<hr>
+								<p>You can now deploy VAJIRA-MD in heroku platform. no banned, no crash and no bugs. you can enjoy after deploy in heroku super fast amd secure your accounts. enjoy guys good luck! <a href="https://www.heroku.com/">Click Here</a> Create a account.</p>								<hr>
 								
 							
 							<div class="copyright-text copyright-text-s3 pdt-m text-center">
