--- a/vajira.deploy/railway.html
+++ b/vajira.deploy/railway.html
@@ -179,16 +179,16 @@ Klik Disini" />
 																									</ol>
 												<div class="carousel-inner" role="listbox">
 													<div class="carousel-item active">
-														<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fluid rounded" src="https://i.ibb.co/LXgRmW3m/maxresdefault.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Railway" />
+														<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fluid rounded" src="https://i.ibb.co/JRS6brkZ/hq720.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Railway" />
 													</div>
 																											<div class="carousel-item">
-															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="https://i.ibb.co/LXgRmW3m/maxresdefault.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Railway" />
+															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="https://i.ibb.co/JRS6brkZ/hq720.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Railway" />
 														</div>
 																											<div class="carousel-item">
-															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="https://i.ibb.co/LXgRmW3m/maxresdefault.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Railway" />
+															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="https://i.ibb.co/JRS6brkZ/hq720.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Railway" />
 														</div>
 																											<div class="carousel-item">
-															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="https://i.ibb.co/LXgRmW3m/maxresdefault.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Railway" />
+															<script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e2c8e9b4d3be7363dceadd8-|49"></script><img class="img-fuild rounded" style="height: 100%; width: 100%" src="https://i.ibb.co/JRS6brkZ/hq720.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' alt="Deploy in Railway" />
 														</div>
 																									</div>
 												<a class="carousel-control-prev" data-bs-target="#carousel-interval" role="button" data-bs-slide="prev">
