--- a/vajira.deploy/workflow.html
+++ b/vajira.deploy/workflow.html
@@ -217,13 +217,41 @@ Klik Disini" />
 <!-- COPY TEXT BOX -->
 <div class="card shadow blog p-2 mb-3">
   <div class="d-grid">
-    <textarea id="copyText" class="form-control" rows="4" readonly>VAJIRA-MD BEST WHATSAPP BOT ✨
+    <textarea id="copyText" class="form-control" rows="4" readonly>name: Node.js CI
 
-Github: https://github.com/VajiraOfficialBot/VAJIRA-MD
-Website: https://vajira-md.vercel.app
-Support: https://wa.me/94715166712
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Start application
+      run: npm start
     </textarea>
-    <button onclick="copyToClipboard()" class="btn btn-success mt-2"><i class="uil-copy"></i> Copy Text</button>
+    <button onclick="copyToClipboard()" class="btn btn-success mt-2"><i class="uil-copy"></i> Copy code</button>
   </div>
 </div>
 
@@ -234,7 +262,7 @@ function copyToClipboard() {
   copyText.select();
   copyText.setSelectionRange(0, 99999); // For mobile devices
   document.execCommand("copy");
-  alert("✅ Text copied:\n" + copyText.value);
+  alert("✅ Code copied:\n" + copyText.value);
 }
 </script>
 
