--- a/vajira.deploy/index.html
+++ b/vajira.deploy/index.html
@@ -33,6 +33,41 @@
 	<link rel="stylesheet" href="theme/frontend/crypto-dark-v3/assets/css/style-darka8c4.css?ver=557" id="changeTheme">
 	<link rel="stylesheet" href="theme/frontend/crypto-dark-v3/assets/css/stylecd0e.css?ver=90">
 	<link href="public/assets/backend/css/icons.min.css" rel="stylesheet" type="text/css" />
+	
+	
+	
+	
+	
+	<li class="nav-item dropdown">
+<a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown" style="margin-right: -15px;">
+<i class="bi bi-chat-left-text"></i>
+</a>
+<ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages pe-3 alight-center">
+<li class="dropdown-header">
+use this chat box properly and correctly.
+<a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">comment-box</span></a>
+</li>
+<li>
+<hr class="dropdown-divider">
+</li>
+<li class="message-item">
+<a href="#">
+<iframe src="https://my.cbox.ws/vajiratech" width="100%" height="550" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
+</a>
+</li>
+<li>
+<hr class="dropdown-divider">
+</li>
+<li class="dropdown-footer">
+<a href="#"></a>
+</li>
+</ul>
+</li>
+	
+	
+	
+	
+	
 	<style>
 		.has-fixed:not(.is-dark) .header-main {
 			background: #FFF;
